update doc swagger health
