# docs/swagger.yaml
@@ -260,4 +260,20 @@ paths:
       summary: Update product
       tags:
       - products
+  /health:
+    get:
+      consumes:
+      - application/json
+      description: Health check
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Health check
+      tags:
+      - health
 swagger: "2.0"
